+Grundstruktur MiracleList_BU

--- a/src/ITVisions.Blazor/Controls/SystemInfo.razor
+++ b/src/ITVisions.Blazor/Controls/SystemInfo.razor
@@ -59,7 +59,7 @@ else
   if (JS != null)
   {
    this.JSRuntime = JS;
-   this.Util = new BlazorUtil(JS, null, null);
+   this.Util = new BlazorUtil(JS, null);
   }
 
   try
