--- a/src/MLBlazorRCL/MainView/TaskEdit.razor
+++ b/src/MLBlazorRCL/MainView/TaskEdit.razor
@@ -1,4 +1,4 @@
-﻿@attribute [Authorize]
+﻿@* @attribute [Authorize] TODO!!! *@
 @inject BlazorUtil Util
 @using BO
 @using Microsoft.AspNetCore.Components.Forms
