--- a/src/MiracleList_BU/Components/Routes.razor
+++ b/src/MiracleList_BU/Components/Routes.razor
@@ -1,6 +1,15 @@
-﻿<Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly,      typeof(MLBlazorRCL.Login.Login).Assembly, }">
+﻿<Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly,      typeof(MLBlazorRCL.Login.Login).Assembly,      typeof(Samples.SamplesList).Assembly }">
+
+ <Navigating>
+  <div>
+   <p>Loading the requested page...</p>
+  </div>
+ </Navigating>
+
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MLBlazorRCL.Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+
     </Found>
+
 </Router>
