--- a/src/MiracleList_BD/Web/App.razor
+++ b/src/MiracleList_BD/Web/App.razor
@@ -10,6 +10,13 @@
   <Navigating>
    <div>
     <p>Loading the requested page...</p>
+    <div class="spinner">
+     <div class="rect1"></div>
+     <div class="rect2"></div>
+     <div class="rect3"></div>
+     <div class="rect4"></div>
+     <div class="rect5"></div>
+    </div>
    </div>
   </Navigating>
   <Found Context="routeData">
