+fehlendes   <div class="container-fluid">

--- a/src/MiracleList_BU/Components/App.razor
+++ b/src/MiracleList_BU/Components/App.razor
@@ -43,8 +43,11 @@
 </head>
 
 <body>
+ <div class="container-fluid">
  <Routes @rendermode="@(new ServerRenderMode(prerender: false))" />
+ </div>
  <script src="_framework/blazor.web.js"></script>
+
 </body>
 
 </html>
