--- a/src/MLBlazorRCL/MainView/Main.razor
+++ b/src/MLBlazorRCL/MainView/Main.razor
@@ -2,7 +2,7 @@
 @page "/Index"
 @page "/app"
 @page "/task/{TaskID:int}"
-@* @attribute [Authorize] TODO!!! *@
+@attribute [Authorize] 
 @using ITVisions.TextGenerator;
 @using ITVisions.Blazor
 @using ITVisions.Blazor.Controls
