--- a/src/SamplesRCL/Forms/ElementReferenceDemo.razor
+++ b/src/SamplesRCL/Forms/ElementReferenceDemo.razor
@@ -21,7 +21,7 @@
  {
   js.InvokeVoidAsync("alert", NameComponent.Element.Value.Id + " (" + NameComponent.DisplayName + "): " + NameComponent.Value);
   NameComponent.Element.Value.FocusAsync();
-  // TODO: Validieren, Speichern, etc.
+  // nun Validieren, Speichern, etc.
  }
 
  protected override void OnInitialized()
