Fix: Falscher Tagname, sodass ServerState nicht angezeigt wurde

--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -46,7 +46,7 @@
      }
     </select>
     <div style="margin-top: 10px">
-     <MLBlazorRCL.ServerState></MLBlazorRCL.ServerState>
+     <ServerState></ServerState>
     </div>
    </div>
   </div>
