--- a/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/VorlagenbasierteKomponenten.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/VorlagenbasierteKomponenten.razor
@@ -3,13 +3,11 @@
 @using ITVisions.Blazor.Controls
 @inject BlazorUtil Util
 
-<h1>Vorlagenbasierte Komponentenvorlagen</h1>
+<h1>Vorlagenbasierte Komponenten</h1>
 
 <h3>ITVButton (vorlagenbasiert + AdditionalAttributes)</h3>
 
 <p>
-
-
 <ITVButton onClick="Aktion" AnimationSeconds="1" class="btn btn-success" title="mit Animation">
  <span class='glyphicon glyphicon-plus'></span> Wert = @counter - Klick mich!
 </ITVButton>
