UI verbessert + Kommentare

--- a/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/VorlagenbasierteKomponenten.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/VorlagenbasierteKomponenten.razor
@@ -8,27 +8,26 @@
 <h3>ITVButton (vorlagenbasiert + AdditionalAttributes)</h3>
 
 <p>
-<ITVButton onClick="Aktion" AnimationSeconds="1" class="btn btn-success" title="mit Animation">
+
+ Animationsdauer:
+ <input type="number" @bind-value="animationsDauer" style="width:40px" />
+
+<ITVButton onClick="Aktion" AnimationSeconds="@animationsDauer" class="btn btn-success" title="mit Animation">
  <span class='glyphicon glyphicon-plus'></span> Wert = @counter - Klick mich!
 </ITVButton>
 
-<ITVButton onClick="Aktion" AnimationSeconds="0" class="btn btn-warning" style="color:black" title="ohne Animation">
- <span class='glyphicon glyphicon-plus'></span> Wert = @counter - Klick mich!
-</ITVButton>
-</p>
-
-<p>
-<ITVButton onClick="AktionMitFehler" AnimationSeconds="1" class="btn btn-danger" title="mit Animation und Fehler ohne Fehlerbehandlung">
+<ITVButton onClick="AktionMitFehler" AnimationSeconds="@animationsDauer" class="btn btn-danger" title="mit Animation und Fehler ohne Fehlerbehandlung">
  <span class='glyphicon glyphicon-plus'></span> Wert = @counter - Klick mich!
 </ITVButton>
 
-<ITVButton onClick="AktionMitFehler" onError='async (ex)=>await Util.Alert("FEHLER: " + ex.Message)' AnimationSeconds="1" class="btn btn-danger" title="mit Animation und Fehler mit Fehlerbehandlung">
+<ITVButton onClick="AktionMitFehler" onError='async (ex)=>await Util.Alert("FEHLER: " + ex.Message)' AnimationSeconds="@animationsDauer" class="btn btn-danger" title="mit Animation und Fehler mit Fehlerbehandlung">
  <span class='glyphicon glyphicon-plus'></span> Wert = @counter - Klick mich!
 </ITVButton>
 </p>
 
 @code
 {
+ byte animationsDauer = 2;
  int counter = 41;
 
  async Task Aktion()
@@ -43,7 +42,6 @@
  }
 }
 
-<br />
 <h3>Expander</h3>
 
 @code
