--- a/src/ITVisions.Blazor/Controls/ITVButton.razor
+++ b/src/ITVisions.Blazor/Controls/ITVButton.razor
@@ -57,7 +57,7 @@
   Working = true;
   await UIUpdate();
 
-  // Animation soll min. x Sekunden laufen
+  #region Animation (soll min. x Sekunden laufen)
   if (AnimationSeconds > 0)
   {
    ShowAnimation = true;
@@ -78,7 +78,9 @@
    };
    t.Start();
   }
+  #endregion
 
+  #region Button-Aktion mit Fehlerabfangen
   try
   {
    await onClick.InvokeAsync();
@@ -102,6 +104,7 @@
 
    }
   }
+  #endregion
   Working = false;
 
   if (MinDone)
