--- a/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/VorlagenbasierteKomponenten.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/VorlagenbasierteKomponenten.razor
@@ -9,7 +9,7 @@
 
 <p>
 
- Animationsdauer:
+ Animationsmindestdauer:
  <input type="number" @bind-value="animationsDauer" style="width:40px" />
 
 <ITVButton onClick="Aktion" AnimationSeconds="@animationsDauer" class="btn btn-success" title="mit Animation">
