--- a/src/ITVisions.Blazor/Controls/Alert.razor
+++ b/src/ITVisions.Blazor/Controls/Alert.razor
@@ -14,9 +14,9 @@
  public string Type { get; set; } = "alert-warning";
 
  [Parameter]
- public RenderFragment? Title { get; set; }
+ public RenderFragment Title { get; set; }
 
  [Parameter]
- public RenderFragment? Text { get; set; }
+ public RenderFragment Text { get; set; }
 
 }
