--- a/src/ITVisions.Blazor/Controls/Card.razor
+++ b/src/ITVisions.Blazor/Controls/Card.razor
@@ -16,12 +16,12 @@
  public EventCallback OnHeaderClick { get; set; }
 
  [Parameter]
- public RenderFragment? Header { get; set; }
+ public RenderFragment Header { get; set; }
 
  [Parameter]
- public RenderFragment? Title { get; set; }
+ public RenderFragment Title { get; set; }
 
  [Parameter]
- public RenderFragment? Text { get; set; }
+ public RenderFragment Text { get; set; }
 
 }
