--- a/src/ITVisions.Blazor/Controls/ITVCard.razor
+++ b/src/ITVisions.Blazor/Controls/ITVCard.razor
@@ -17,5 +17,5 @@
  public string Color { get; set; } = "";
 
  [Parameter]
- public RenderFragment? ChildContent { get; set; }
+ public RenderFragment ChildContent { get; set; }
 }
