--- a/src/ITVisions.Blazor/Controls/ITVCheckbox.razor
+++ b/src/ITVisions.Blazor/Controls/ITVCheckbox.razor
@@ -12,6 +12,7 @@
  [Parameter]
  public string Label { get; set; }
 
+#pragma warning disable BL0007 // "should be auto property" unterdrücken
  [Parameter]
  public Boolean Value
  {
