--- a/src/ITVisions.Blazor/Controls/Switch.razor
+++ b/src/ITVisions.Blazor/Controls/Switch.razor
@@ -20,6 +20,8 @@
 
  private bool? _Value;
 
+
+#pragma warning disable BL0007 // "should be auto property" unterdrücken
  [Parameter]
  public bool? Value
  {
