--- a/src/MiracleList_BS/Samples_BS/ProtectedBrowserStorage/CounterWithProtectedBrowserStorage.razor
+++ b/src/MiracleList_BS/Samples_BS/ProtectedBrowserStorage/CounterWithProtectedBrowserStorage.razor
@@ -14,11 +14,11 @@
  int? sessionCount = null;
  int? localCount = null;
 
- protected override async Task OnInitializedAsync()
- {
-  // geht hier nicht in BS ("JavaScript interop calls cannot be issued at this time")
-  // sessionCount = (await ProtectedSessionStorage.GetAsync<int>("count")).Value;
- }
+ // protected override async Task OnInitializedAsync()
+ // {
+ //  // geht hier nicht in BS ("JavaScript interop calls cannot be issued at this time")
+ //  // sessionCount = (await ProtectedSessionStorage.GetAsync<int>("count")).Value;
+ // }
 
  protected override async Task OnAfterRenderAsync(bool first)
  {
