--- a/Test/BlazorTests/CounterTests/CounterAsync.razor
+++ b/Test/BlazorTests/CounterTests/CounterAsync.razor
@@ -1,5 +1,5 @@
 ﻿@* Normalerweise liegen die zu testenden Komponenten nicht im gleichen Projekt wie die Tests.
-In diesem einfachen Testfällen liegt beides in einem Projekt, um in Schulungen und Präsentionen Wechsel zu vermeiden, die für die Zuschauer unübersichtlich werden *@
+In diesem einfachen Testfällen liegt beides in einem Projekt, um in Schulungen und Präsentionen Projektwechsel zu vermeiden, die für die Zuschauer unübersichtlich werden *@
 
 <div>
 <h1>Counter</h1>
