NuGet-Updates und Anpassungen an .NET 8.0 RC2

--- a/src/MiracleList_BU/Components/App.razor
+++ b/src/MiracleList_BU/Components/App.razor
@@ -44,7 +44,7 @@
 
 <body>
  <div class="container-fluid">
- <Routes @rendermode="@(new ServerRenderMode(prerender: false))" />
+  <Routes @rendermode="@RenderMode.InteractiveServer" />
  </div>
  <script src="_framework/blazor.web.js"></script>
 
