Umschalten auf Auto-Modus

--- a/src/MiracleList_BU/Components/App.razor
+++ b/src/MiracleList_BU/Components/App.razor
@@ -44,7 +44,7 @@
 
 <body>
  <div class="container-fluid">
-  <Routes @rendermode="@RenderMode.InteractiveServer" />
+  <Routes @rendermode="@RenderMode.InteractiveAuto" />
  </div>
  <script src="_framework/blazor.web.js"></script>
 
