--- a/src/MiracleList_BU/Components/_Imports.razor
+++ b/src/MiracleList_BU/Components/_Imports.razor
@@ -23,10 +23,9 @@
 
 @*Eigene Namensräume*@
 @using Web
+@using Web.Components
 @using MLBlazorRCL
 @using MiracleList
-@using MiracleList_BU
-@using MiracleList_BU.Components
 
 @*DI hier auch möglich*@
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
