--- a/src/MiracleList_BU.Client/_Imports.razor
+++ b/src/MiracleList_BU.Client/_Imports.razor
@@ -5,4 +5,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using MiracleList_BU.Client
+@using Web.Client
