--- a/src/MiracleList_BU.Client/Routes.razor
+++ b/src/MiracleList_BU.Client/Routes.razor
@@ -1,4 +1,8 @@
-﻿<Router AppAssembly="@typeof(_Imports).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly,      typeof(MLBlazorRCL.Login.Login).Assembly,      typeof(Samples.SamplesList).Assembly }">
+﻿@using Microsoft.AspNetCore.Components.Authorization
+
+<CascadingAuthenticationState>
+ 
+ <Router AppAssembly="@typeof(_Imports).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly,      typeof(MLBlazorRCL.Login.Login).Assembly,      typeof(Samples.SamplesList).Assembly }">
 
  <Navigating>
   <div>
@@ -13,3 +17,4 @@
     </Found>
 
 </Router>
+</CascadingAuthenticationState>
