--- a/src/MiracleList_BU.Client/Routes.razor
+++ b/src/MiracleList_BU.Client/Routes.razor
@@ -1,7 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
-
-<CascadingAuthenticationState>
- 
  <Router AppAssembly="@typeof(_Imports).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly,      typeof(MLBlazorRCL.Login.Login).Assembly,      typeof(Samples.SamplesList).Assembly }">
 
  <Navigating>
@@ -11,10 +8,9 @@
  </Navigating>
 
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MLBlazorRCL.Layout.MainLayout)" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MLBlazorRCL.Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
 
     </Found>
 
 </Router>
-</CascadingAuthenticationState>
