--- a/src/SamplesRCL/Komponenteneinbettung/Komponentenhost_Misc/Komponentenhost_Misc.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/Komponentenhost_Misc/Komponentenhost_Misc.razor
@@ -42,10 +42,10 @@
  <ITVisions.Blazor.Controls.Debug>Dieser <a href="https://www.IT-Visions.de">Link</a> sollte nur zur Entwicklungszeit sichtbar sein!</ITVisions.Blazor.Controls.Debug>
 </p>
 
-<p>Hier fehlt der Namensraum: Debug wird als HTML-Tag interpretiert und der Inhalt ist immer sichtbar!<br />
+@* <p>Hier fehlt der Namensraum: Debug wird als HTML-Tag interpretiert und der Inhalt ist immer sichtbar!<br />
 
  <Debug>
   Dieser <a href="https://www.IT-Visions.de">Link</a> sollte nur zur Entwicklungszeit sichtbar sein, aber leider ist er auch im produktiven Betrieb sichtbar
  </Debug>
-
+ *@
 </p>
