--- a/src/MiracleList_BW/App.razor
+++ b/src/MiracleList_BW/App.razor
@@ -57,7 +57,9 @@
 </CascadingAuthenticationState>
 
 @code {
- private List<Assembly> lazyLoadedAssemblies = new() { typeof(MLBlazorRCL.MainView.Main).Assembly };
+ // Samples.SamplesList nurDafuerDaWeilBlazorWebAssemblyIrgendeineDirekteNutzungBraucht = new();
+
+ private List<Assembly> lazyLoadedAssemblies = new() { typeof(MLBlazorRCL.MainView.Main).Assembly, typeof(Samples.SamplesList).Assembly };
 
  private async Task OnNavigateAsync(NavigationContext args)
  {
@@ -66,9 +68,9 @@
   // Aber es gibt in /Samples_BW und /Samples_BS in den Hauptprojekten!
   if (args.Path.Contains("Samples/", System.StringComparison.CurrentCultureIgnoreCase) || args.Path.Contains("SamplesList", System.StringComparison.CurrentCultureIgnoreCase))
   {
-   Console.WriteLine("Lazy Loading SamplesRCL.dll...");
-   var a = await LazyAssemblyLoader.LoadAssembliesAsync(new string[] { "SamplesRCL.dll" });
-   lazyLoadedAssemblies.AddRange(a);
+   // Console.WriteLine("Lazy Loading SamplesRCL.dll...");
+   // var a = await LazyAssemblyLoader.LoadAssembliesAsync(new string[] { "SamplesRCL.dll" });
+   // lazyLoadedAssemblies.AddRange(a);
   }
  }
 }
