--- a/src/MiracleList_Backend/Pages/ClientIDConfirmation.cshtml
+++ b/src/MiracleList_Backend/Pages/ClientIDConfirmation.cshtml
@@ -8,7 +8,7 @@
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,Miraclelist_WebAPI
 @addTagHelper *,ITVTagHelper
-<h2>Beantragung für Client-ID</h2>
+<h2>Beantragung für Client-ID: Bestätigung</h2>
 
 <div>
 
