--- a/src/MiracleList_Backend/Pages/ClientID.cshtml
+++ b/src/MiracleList_Backend/Pages/ClientID.cshtml
@@ -103,7 +103,7 @@
    </xs12>
   </row>
 
-  <a class="btn btn-danger" href="./ClientID"> Abbrechen </a>
+  <a class="btn btn-danger" href="./"> Abbrechen </a>
   <input type="submit" class="btn btn-success" value="Client-ID jetzt beantragen" asp-page-handler="Beantragen" />
   <br /><br />
   @*oder: @Html.ValidationSummary("", new { @class = "text-danger" })*@
