--- a/src/MiracleList_BU.Client/Components/Routes.razor
+++ b/src/MiracleList_BU.Client/Components/Routes.razor
@@ -1,4 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
+@inject NavigationManager NavigationManager
+
 <Router AppAssembly="@typeof(_Imports).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly, typeof(MLBlazorRCL.Login.Login).Assembly, typeof(Samples.SamplesList).Assembly }">
 
  <Navigating>
@@ -8,9 +10,35 @@
  </Navigating>
 
  <Found Context="routeData">
-  <RouteView RouteData="@routeData" DefaultLayout="@typeof(MLBlazorRCL.Layout.MainLayout)" />
+  <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MLBlazorRCL.Layout.MainLayout)">
+
+   <Authorizing>
+    <div class="spinner">
+     <div class="rect1"></div>
+     <div class="rect2"></div>
+     <div class="rect3"></div>
+     <div class="rect4"></div>
+     <div class="rect5"></div>
+    </div>
+    <h2 style="text-align:center">Authorizing...</h2>
+   </Authorizing>
+
+   <NotAuthorized>
+    @{
+     NavigationManager.NavigateTo("/");
+    }
+    @*oder: Sie sind nicht angemeldet und können den Inhalt dieser Seite daher nicht sehen. Bitte melden Sie sich an in der <a href="/Login">Anmeldemaske</a>*@
+   </NotAuthorized>
+
+   </AuthorizeRouteView>
   <FocusOnNavigate RouteData="@routeData" Selector="h1" />
 
  </Found>
 
+   <NotFound>
+   <PageTitle>Not found</PageTitle>
+   <h1>Sorry, Page not found :-(</h1>
+  </NotFound>
+
 </Router>
+
