Umstellung auf Directory.Build.props

--- a/src/SamplesRCL/TippsUndTricks/Mehrsprachigkeit/Localization.razor
+++ b/src/SamplesRCL/TippsUndTricks/Mehrsprachigkeit/Localization.razor
@@ -73,7 +73,7 @@
     }
     else if (Util.IsHybrid)
     {
-     // Versuch, läuft aber noch nicht optiomal :-(
+     // Versuch, läuft aber noch nicht optimal :-(
      var culture = new CultureInfo(value.Name);
      CultureInfo.DefaultThreadCurrentCulture = culture;
      CultureInfo.DefaultThreadCurrentUICulture = culture;
