--- a/src/SamplesRCL/Forms/FormSimple.razor
+++ b/src/SamplesRCL/Forms/FormSimple.razor
@@ -65,7 +65,7 @@
     <textarea id="C_Note" @bind="person.Notes" class="form-control" placeholder="Any note" rows="5" />
    </div>
 
-   <button type="button" @onclick="Submit" class="btn btn-primary">Speichern</button>
+   <button type="submit" @onclick="Submit" class="btn btn-primary">Speichern</button>
 
   </div>
 
