--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -63,9 +63,8 @@
 
 <div>
 
- <text>MiracleList v</text>
- @System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString()
- basiert auf @Util.GetBlazorVersionInfo()
+ <text>MiracleList v</text>@System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString()
+ läuft mit @Util.GetBlazorVersionInfo()
 </div>
 
 <a href="/about">Mehr Systeminformationen</a>
